<resources>
    <string name="app_name">RussianPassword</string>
    <string name="enter_password">Введите пароль на русском языке</string>

    <string name="enter_password_hint">русский пароль</string>
    <string name="generate">Сгенерировать</string>
    <string name="generatePassword">Сгенерируйте пароль</string>
    <string name="upLetters">Заглавные буквы</string>
    <string name="numbers">Цифры</string>
    <string name="specialSymbols">Спец символы</string>

    <string name="lettersForPassword">qwertyuiopasdfghjklzxcvbnm</string>

    <string name="upLettersForPassword">QWERTYUIOPASDFGHJKLZXCVBNM</string>

    <string name="numbersForPassword">0123456789</string>

    <string name="specialSymbolsForPassword">!@#$%^*_</string>
    <string name="initialLength">Длина: 8 символов +</string>
    <string name="initialString">Длина: 8 символов + 0 символов = 8 символов</string>
    <string name="badPassword">Очень слабый</string>
    <string name="initialComplexityTxt">Сложность пароля</string>

    <string-array name="complexity">
        <item>Очень плохой</item>
        <item>Плохой</item>
        <item>Нормальный</item>
        <item>Средней сложности</item>
        <item>Хороший</item>
        <item>Очень хороший</item>
        <item>Отличный</item>
    </string-array>

    <plurals name="count_length">
        <item quantity="one">символ</item>
        <item quantity="two">символа</item>
        <item quantity="few">символа</item>
        <item quantity="many">символов</item>
        <item quantity="other">символов</item>
    </plurals>

    <string-array name="russians">
        <item>й</item>
        <item>ц</item>
        <item>у</item>
        <item>к</item>
        <item>е</item>
        <item>н</item>
        <item>г</item>
        <item>ш</item>
        <item>щ</item>
        <item>з</item>
        <item>х</item>
        <item>ъ</item>
        <item>ф</item>
        <item>ы</item>
        <item>в</item>
        <item>а</item>
        <item>п</item>
        <item>р</item>
        <item>о</item>
        <item>л</item>
        <item>д</item>
        <item>ж</item>
        <item>я</item>
        <item>ч</item>
        <item>с</item>
        <item>м</item>
        <item>и</item>
        <item>т</item>
        <item>ь</item>
        <item>б</item>
        <item>ю</item>
        <item>э</item>
    </string-array>

    <string-array name="latin">
        <item>q</item>
        <item>w</item>
        <item>e</item>
        <item>r</item>
        <item>t</item>
        <item>y</item>
        <item>u</item>
        <item>i</item>
        <item>o</item>
        <item>p</item>
        <item>[</item>
        <item>]</item>
        <item>a</item>
        <item>s</item>
        <item>d</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>;</item>
        <item>z</item>
        <item>x</item>
        <item>c</item>
        <item>v</item>
        <item>b</item>
        <item>n</item>
        <item>m</item>
        <item>,</item>
        <item>.</item>
        <item>\'</item>
    </string-array>
</resources>
